--- a/helm/nwdaf-netapi/templates/service.yaml
+++ b/helm/nwdaf-netapi/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "nwdaf-netapi.fullname" . }}
+  name: {{ .Values.service.name }}
   labels:
     {{- include "nwdaf-netapi.labels" . | nindent 4 }}
 spec:
