--- a/helm/nwdaf-netapi/templates/tests/test-connection.yaml
+++ b/helm/nwdaf-netapi/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "nwdaf-netapi.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ .Values.service.name }}:{{ .Values.service.port }}']
   restartPolicy: Never
