--- a/helm/nwdaf-netapi/values.yaml
+++ b/helm/nwdaf-netapi/values.yaml
@@ -6,13 +6,23 @@ replicaCount: 1
 
 image:
   repository: nginx
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+
+env:
+  - name: NWDAF_HOSTNAME
+    value: nwdaf
+
+configMap:
+  uriEventSubscription: http://events-subs:8080
+  uriDataManagement: http://data-mgmt:8080
+  uriMlModelProvisioning: http://ml_model_provisioning:8080
+  uriAnalyticsInfo: http://analytics-info:8080
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -40,6 +50,7 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
+  name: nwdaf-nginx
   type: ClusterIP
   port: 80
 
@@ -72,13 +83,15 @@ resources: {}
   #   memory: 128Mi
 
 livenessProbe:
-  httpGet:
-    path: /
-    port: http
+  tcpSocket:
+    port: 80
+  initialDelaySeconds: 25
+  periodSeconds: 5
 readinessProbe:
-  httpGet:
-    path: /
-    port: http
+  tcpSocket:
+    port: 80
+  initialDelaySeconds: 25
+  periodSeconds: 5
 
 autoscaling:
   enabled: false
@@ -88,17 +101,19 @@ autoscaling:
   # targetMemoryUtilizationPercentage: 80
 
 # Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
+volumes:
+  - name: nginx-config
+    configMap:
+      name: nginx-conf
+      items:
+        - key: nginx.conf
+          path: nginx.conf
 
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
+volumeMounts:
+  - name: nginx-config
+    mountPath: /etc/nginx/nginx.conf
+    subPath: nginx.conf
 
 nodeSelector: {}
 
