--- a/helm/nwdaf-netapi/charts/nginx/Chart.yaml
+++ b/helm/nwdaf-netapi/charts/nginx/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: nwdaf-netapi
+name: nginx
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -22,26 +22,3 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.0.1"
-
-dependencies:
-  - name: analytics_info
-    version: "*"
-    condition: analytics_info.enabled
-  - name: data_management
-    version: "*"
-    condition: data_management.enabled
-  - name: events_subscription
-    version: "*"
-    condition: events_subscription.enabled
-  - name: ml_model_provisioning
-    version: "*"
-    condition: ml_model_provisioning.enabled
-  - name: mongo
-    version: "*"
-    condition: mongo.enabled
-  - name: mongo-express
-    version: "*"
-    condition: mongo-express.enabled
-  - name: nginx
-    version: "*"
-    condition: nginx.enabled
