--- a/helm/nwdaf-netapi/charts/nginx/templates/hpa.yaml
+++ b/helm/nwdaf-netapi/charts/nginx/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "nwdaf-netapi.fullname" . }}
+  name: {{ include "nginx.fullname" . }}
   labels:
-    {{- include "nwdaf-netapi.labels" . | nindent 4 }}
+    {{- include "nginx.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "nwdaf-netapi.fullname" . }}
+    name: {{ include "nginx.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
