--- a/helm/nwdaf-netapi/charts/nginx/templates/service.yaml
+++ b/helm/nwdaf-netapi/charts/nginx/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ .Values.service.name }}
   labels:
-    {{- include "nwdaf-netapi.labels" . | nindent 4 }}
+    {{- include "nginx.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "nwdaf-netapi.selectorLabels" . | nindent 4 }}
+    {{- include "nginx.selectorLabels" . | nindent 4 }}
