--- a/helm/nwdaf-netapi/charts/analytics_info/templates/service.yaml
+++ b/helm/nwdaf-netapi/charts/analytics_info/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ .Values.service.name }}
   labels:
-    {{- include "analytics_info.labels" . | nindent 4 }}
+    {{- include "analytics-info.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "analytics_info.selectorLabels" . | nindent 4 }}
+    {{- include "analytics-info.selectorLabels" . | nindent 4 }}
