--- a/helm/nwdaf-netapi/charts/analytics_info/templates/serviceaccount.yaml
+++ b/helm/nwdaf-netapi/charts/analytics_info/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "analytics_info.serviceAccountName" . }}
+  name: {{ include "analytics-info.serviceAccountName" . }}
   labels:
-    {{- include "analytics_info.labels" . | nindent 4 }}
+    {{- include "analytics-info.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
