--- a/helm/nwdaf-netapi/charts/analytics_info/templates/tests/test-connection.yaml
+++ b/helm/nwdaf-netapi/charts/analytics_info/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "analytics_info.fullname" . }}-test-connection"
+  name: "{{ include "analytics-info.fullname" . }}-test-connection"
   labels:
-    {{- include "analytics_info.labels" . | nindent 4 }}
+    {{- include "analytics-info.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
