--- a/helm/nwdaf-netapi/charts/analytics_info/values.yaml
+++ b/helm/nwdaf-netapi/charts/analytics_info/values.yaml
@@ -1,4 +1,4 @@
-# Default values for analytics_info.
+# Default values for analytics-info.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
