--- a/helm/nwdaf-netapi/charts/data_management/templates/service.yaml
+++ b/helm/nwdaf-netapi/charts/data_management/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ .Values.service.name }}
   labels:
-    {{- include "data_management.labels" . | nindent 4 }}
+    {{- include "data-management.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "data_management.selectorLabels" . | nindent 4 }}
+    {{- include "data-management.selectorLabels" . | nindent 4 }}
