--- a/helm/nwdaf-netapi/charts/data_management/templates/serviceaccount.yaml
+++ b/helm/nwdaf-netapi/charts/data_management/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "data_management.serviceAccountName" . }}
+  name: {{ include "data-management.serviceAccountName" . }}
   labels:
-    {{- include "data_management.labels" . | nindent 4 }}
+    {{- include "data-management.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
