--- a/helm/nwdaf-netapi/charts/data_management/templates/tests/test-connection.yaml
+++ b/helm/nwdaf-netapi/charts/data_management/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "data_management.fullname" . }}-test-connection"
+  name: "{{ include "data-management.fullname" . }}-test-connection"
   labels:
-    {{- include "data_management.labels" . | nindent 4 }}
+    {{- include "data-management.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
