--- a/helm/nwdaf-netapi/charts/data_management/values.yaml
+++ b/helm/nwdaf-netapi/charts/data_management/values.yaml
@@ -1,4 +1,4 @@
-# Default values for data_management.
+# Default values for data-management.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
