--- a/helm/nwdaf-netapi/charts/events_subscription/templates/serviceaccount.yaml
+++ b/helm/nwdaf-netapi/charts/events_subscription/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "events_subscription.serviceAccountName" . }}
+  name: {{ include "events-subscription.serviceAccountName" . }}
   labels:
-    {{- include "events_subscription.labels" . | nindent 4 }}
+    {{- include "events-subscription.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
