--- a/helm/nwdaf-netapi/charts/events_subscription/templates/tests/test-connection.yaml
+++ b/helm/nwdaf-netapi/charts/events_subscription/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "events_subscription.fullname" . }}-test-connection"
+  name: "{{ include "events-subscription.fullname" . }}-test-connection"
   labels:
-    {{- include "events_subscription.labels" . | nindent 4 }}
+    {{- include "events-subscription.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
