--- a/helm/nwdaf-netapi/charts/events_subscription/values.yaml
+++ b/helm/nwdaf-netapi/charts/events_subscription/values.yaml
@@ -1,4 +1,4 @@
-# Default values for events_subscription.
+# Default values for events-subscription.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
