--- a/helm/nwdaf-netapi/charts/ml_model_provisioning/Chart.yaml
+++ b/helm/nwdaf-netapi/charts/ml_model_provisioning/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: ml_model_provisioning
+name: ml-model-provisioning
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
