--- a/helm/nwdaf-netapi/charts/ml_model_provisioning/templates/service.yaml
+++ b/helm/nwdaf-netapi/charts/ml_model_provisioning/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ .Values.service.name }}
   labels:
-    {{- include "ml_model_provisioning.labels" . | nindent 4 }}
+    {{- include "ml-model-provisioning.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "ml_model_provisioning.selectorLabels" . | nindent 4 }}
+    {{- include "ml-model-provisioning.selectorLabels" . | nindent 4 }}
