--- a/helm/nwdaf-netapi/charts/ml_model_provisioning/templates/serviceaccount.yaml
+++ b/helm/nwdaf-netapi/charts/ml_model_provisioning/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "ml_model_provisioning.serviceAccountName" . }}
+  name: {{ include "ml-model-provisioning.serviceAccountName" . }}
   labels:
-    {{- include "ml_model_provisioning.labels" . | nindent 4 }}
+    {{- include "ml-model-provisioning.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
