--- a/helm/nwdaf-netapi/charts/ml_model_provisioning/templates/tests/test-connection.yaml
+++ b/helm/nwdaf-netapi/charts/ml_model_provisioning/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "ml_model_provisioning.fullname" . }}-test-connection"
+  name: "{{ include "ml-model-provisioning.fullname" . }}-test-connection"
   labels:
-    {{- include "ml_model_provisioning.labels" . | nindent 4 }}
+    {{- include "ml-model-provisioning.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
