--- a/helm/nwdaf-netapi/charts/ml_model_provisioning/values.yaml
+++ b/helm/nwdaf-netapi/charts/ml_model_provisioning/values.yaml
@@ -1,4 +1,4 @@
-# Default values for ml_model_provisioning.
+# Default values for ml-model-provisioning.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
