--- a/helm/nwdaf-netapi/charts/nginx/templates/deployment.yaml
+++ b/helm/nwdaf-netapi/charts/nginx/templates/deployment.yaml
@@ -13,10 +13,8 @@ spec:
       {{- include "nginx.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
       annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+        configHash: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
       labels:
         {{- include "nginx.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
