--- a/helm/nwdaf-netapi/charts/mongo-express/values.yaml
+++ b/helm/nwdaf-netapi/charts/mongo-express/values.yaml
@@ -19,8 +19,8 @@ fullnameOverride: ""
 env:
 
   meConfigMongodbAdminusername: naas_nwdaf_admin
-  meConfigMongodbAdminpassword: y9NoaCU3iWS!Cf2mbWKyG$
-  meConfigMongodbUrl: mongodb://naas_nwdaf_admin:y9NoaCU3iWS!Cf2mbWKyG$@mongo:27017/
+  meConfigMongodbAdminpassword: example
+  meConfigMongodbUrl: mongodb://naas_nwdaf_admin:example@mongo:27017/
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
