--- a/helm/nwdaf-netapi/charts/events-subscription/values.yaml
+++ b/helm/nwdaf-netapi/charts/events-subscription/values.yaml
@@ -18,7 +18,7 @@ env:
   - name: MONGO_USER_NWDAF
     value: naas_nwdaf_admin
   - name: MONGO_PASS_NWDAF
-    value: "y9NoaCU3iWS!Cf2mbWKyG$"
+    value: "example"
   - name: MONGO_HOST_NWDAF
     value: mongo
   - name: MONGO_PORT_NWDAF
@@ -26,13 +26,13 @@ env:
   - name: MONGO_INITDB_ROOT_USERNAME
     value: naas_nwdaf_admin
   - name: MONGO_INITDB_ROOT_PASSWORD
-    value: "y9NoaCU3iWS!Cf2mbWKyG$"
+    value: "example"
   - name: ME_CONFIG_MONGODB_ADMINUSERNAME
     value: naas_nwdaf_admin
   - name: ME_CONFIG_MONGODB_ADMINPASSWORD
-    value: "y9NoaCU3iWS!Cf2mbWKyG$"
+    value: "example"
   - name: ME_CONFIG_MONGODB_URL
-    value: mongodb://naas_nwdaf_admin:y9NoaCU3iWS!Cf2mbWKyG$@mongo:27017/
+    value: mongodb://naas_nwdaf_admin:example@mongo:27017/
   - name: MONGO_DB_NWDAF
     value: nwdaf
   - name: EVENTS_SUBS_COL
